<resources>
    <string name="learn">Let\'s Learn Dialysis</string>
    <string name="test">Test PREP</string>
    <string name="pct">Daily Task</string>
    <string name="app_name">PREP for Dialysis Technician</string>
    <string name="copywrite">\u00A9 2017 MaxLearnStudio</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category_acronyms">Acronyms</string>
    <string name="category_conversions">Conversions</string>
    <string name="category_organiztions">Organizations</string>
    <string name="category_vocabulary">Vocabularies</string>
    <string name="arbd">ARBD</string>
    <string name="arbd_meaning">Aluminum-related Bone Disease</string>
    <string name="av">AV</string>
    <string name="av_meaning">Arteriovenous</string>
    <string name="apd">APD</string>
    <string name="apd_meaning">Automated Peritoneal Dialysis</string>
    <string name="bun">BUN</string>
    <string name="bun_meaning">Blood Urea Nitrogen</string>
    <string name="capd">CAPD</string>
    <string name="capd_meaning">Continuous Ambulatory Peritoneal Dialysis</string>
    <string name="ccpd">CCPD</string>
    <string name="ccpd_meaning">Continuous Cycling Peritoneal Dialysis</string>
    <string name="cfu">CFU</string>
    <string name="cfu_meaning">Colony-Forming Unit</string>
    <string name="chf">CHF</string>
    <string name="chf_meaning">Congestive Heart Failure</string>
    <string name="ckd">CKD</string>
    <string name="ckd_meaning">Chronic Kidney Failure</string>
    <string name="cqi">CQI</string>
    <string name="cqi_meaning">Continuous Quality Improvement</string>
    <string name="crrt">CRRT</string>
    <string name="crrt_meaning">Continuous Renal Replacement Theraphy</string>
    <string name="edw">EDW</string>
    <string name="edw_meaning">Estimated Dry Weight</string>
    <string name="epo">EPO</string>
    <string name="epo_meaning">Erythropoietin</string>
    <string name="esrd">ESRD</string>
    <string name="esrd_meaning">End-Stage Renal Disease</string>
    <string name="eto">ETO</string>
    <string name="eto_meaning">Ethylene Oxide</string>
    <string name="fbv">FBV</string>
    <string name="fbv_meaning">Fiber Bundle Volume</string>
    <string name="gfr">GFR</string>
    <string name="gfr_meaning">Glomerular Filtration Rate</string>
    <string name="hct">hct</string>
    <string name="hct_meaning">Hematocrit</string>
    <string name="hgb">Hgb</string>
    <string name="hgb_meaning">Hemoglobin</string>
    <string name="hippa">HIPPA</string>
    <string name="hippa_meaning">Health Insurance Portability and Accountability</string>
    <string name="hiv">HIV</string>
    <string name="hiv_meaning">Human Immunodeficiency Virus</string>
    <string name="ij">IJ</string>
    <string name="ij_meaning">Internal Jugular</string>
    <string name="iu">IU</string>
    <string name="iu_meaning">Isolated Ultrafiltration</string>
    <string name="k">K</string>
    <string name="k_meaning">Clearance</string>
    <string name="ktv">Kt/V</string>
    <string name="ktv_meaning">Measure of Adequacy</string>
    <string name="kut">K ut</string>
    <string name="kut_meaning">Coefficient of Ultrafiltration</string>
    <string name="mi">MI</string>
    <string name="mi_meaning">Myocardial Infarction</string>
    <string name="ng">NG</string>
    <string name="ng_meaning">Nasogastric</string>
    <string name="pd">PD</string>
    <string name="pd_meaning">Peritoneal Dialysis</string>
    <string name="ph">pH</string>
    <string name="ph_meaning">Measure of Acidity</string>
    <string name="pth">PTH</string>
    <string name="pth_meaning">Parathyroid Hormone</string>
    <string name="ro">RO</string>
    <string name="ro_meaning">Reverse Osmosist</string>
    <string name="sdhhd">SDHHD</string>
    <string name="sdhhd_meaning">Short Daily Home Hemodialysis</string>
    <string name="sc">SC</string>
    <string name="sc_meaning">Sieving Coefficient</string>
    <string name="tcv">TCV</string>
    <string name="tcv_meaning">Total Cell Volume</string>
    <string name="tmp">TMP</string>
    <string name="tmp_meaning">Transmembrane Pressure</string>
    <string name="tnp">TNP</string>
    <string name="tnp_meaning">Total Parenteral Nutrition</string>
    <string name="uf">UF</string>
    <string name="uf_meaning">Ultrafiltration</string>
    <string name="ufr">UFR</string>
    <string name="ufr_meaning">Ultrafiltration Rate</string>
    <string name="ukm">UKM</string>
    <string name="ukm_meaning">Urea Kinetic Modeling</string>
    <string name="uv">UV</string>
    <string name="uv_meaning">Ultraviolet</string>
    <string name="urr">URR</string>
    <string name="urr_meaning">Urea Reduction Ratio</string>
    <string name="liquid_measurement">Liquid Measurement</string>
    <string name="liquid_measurement_meaning">
	1 fluid ounce = 29.572 mL \n
	1 cup = 8 fluid ounce \n
	1 cup = 236.565 mL \n
	1 quart = 32 fluid ounce \n
	1 quart = 945 mL \n
	1 L = 1.0567 quarts \n
	1 L = 0.26417 gallons \n 
	1 gallon = 4 quarts \n
	1 gallon = 3785 mL
	</string>
    <string name="metric_liquid_measures">Metric Liquid Measures</string>
    <string name="metric_liquid_measures_measurement_meaning">
	10 mL = 1 cL \n
	10 cL = 1 dL \n
	10 dL = 1 L \n
	10 L = 1 decaliter \n
	10 decaliters = 1 hectoliter \n
	10 hectoliters = 1 kiloliter
	</string>
    <string name="length_measures">Length</string>
    <string name="length_measures_measurement_meaning">
	1 inch = 2.54 cm \n
	1 mm = 0.03937 inches \n
	1 cm = 0.01 m \n
	1 m = 39.37 inches
	</string>
    <string name="weight_measures">Weight</string>
    <string name="weight_measures_measurement_meaning">
	1 g = 0.035273 avoidupois oz \n
	1 g = approximately 1/28 oz \n
	1 oz = 28.35 g \n
	1 nanogram = 1 billionth of a g \n
	1 avoidupois oz = 28.349527 g \n
	1 avoidupois lb = 0.453592 kg \n
	1000 g = 1 kg \n
	1 kg = 2.20462 avoidupois lb
	</string>
    <string name="metric_weight_measures">Metric Weight</string>
    <string name="metric_weight_measures_measurement_meaning">
	10 mg = 1 cg \n
	10 cg  = 1 dg \n
	10 dg = 1000 mg \n
	1000 mg  = 1 g \n
	10 g = 1 dg \n
	10 dg  = 1 hg \n
	10 hg  = 1000 g \n
	1000 g  = 1 kg \n
	100 kg = 1 quintal \n 
	10 quintal = 1 ton
	</string>
    <string name="linear_measures">Linear Measures</string>
    <string name="linear_measures_measurement_meaning">
	10 mm = 1 cm \n
	10 cm  = 1 dm \n
	10 dm = 1000 mm \n
	1000 mm  = 1 m \n
	10 m = 1 dm \n
	10 dm  = 1 hm \n
	10 hm  = 1000 m \n
	1000 m  = 1 km
	</string>
    <string name="metric_square_measures">Metric Square Measures</string>
    <string name="metric_square_measures_measurement_meaning">
	100 sq. mm = 1 sq. cm \n
	100 sq. cm  = 1 sq. dm \n
	10 sq. dm = 10,000 sq. cm \n
	10,000 sq. cm = 1 sq. m \n
	100 sq. m  = 1 sq. dm \n
	100 sq. dm = 1 sq. hm \n
	100 sq. hm  = 1 million sq. m \n
	1 million sq. m = 1 sq. km
	</string>
    <string name="metric_cubic_measures">Metric Cubic Measures</string>
    <string name="metric_cubic_measures_measurement_meaning">
	10 mL = 1 cubic centimeter \n
	1,000 cubic millimeters = 1 cubic centimeter \n
	1,000 cubic centimeters = 1 cubic decimeter \n
	1,000 cubic decimeter = 1,000,000 cubic centimeters \n
	1,000,000 cubic centimeters  = 1 cubic meter
	</string>
    <string name="temp_measures">Temperature</string>
    <string name="temp_measures_measurement_meaning">
	\u2109 to \u2103 = (\u2103 \u00d7 1.8) + 32 \n
	\u2103 to \u2109 = (\u2109 - 32) \u00f7 1.8
	</string>
    <string name="aakp">AAKP</string>
    <string name="aakp_meaning">American Association of Kidney Patients</string>
    <string name="aami">AAMI</string>
    <string name="aami_meaning">Association for the Advancement of Medical Instrumentation</string>
    <string name="ada">ADA</string>
    <string name="ada_meaning">American Diabetes Association</string>
    <string name="afk">AFK</string>
    <string name="afk_meaning">American Kidney Fund</string>
    <string name="anna">ANNA</string>
    <string name="anna_meaning">American Nephrology Nurses Association</string>
    <string name="asn">ASN</string>
    <string name="asn_meaning">American Society of Nephrology</string>
    <string name="bonent">BONENT</string>
    <string name="bonent_meaning">Board of Nephrology Examiners - Nursing and Technology</string>
    <string name="cbnt">CBNT</string>
    <string name="cbnt_meaning">Certified in Biomedical Nephrology Technology</string>
    <string name="ccht">CCHT</string>
    <string name="ccht_meaning">Certified Clinical Hemodialysis Technician</string>
    <string name="ccnt">CCNT</string>
    <string name="ccnt_meaning">Certified in Clinical Nephrology Technology</string>
    <string name="cms">CMS</string>
    <string name="cms_meaning">Centers for Medicare and Medicaid Services</string>
    <string name="dfc">DFC</string>
    <string name="dfc_meaning">Dialysis Facility Compare</string>
    <string name="fda">FDA</string>
    <string name="fda_meaning">Food and Drug Administration</string>
    <string name="kdigo">KDIGO</string>
    <string name="kdigo_meaning">Kidney Disease: Improving Global Outcomes</string>
    <string name="kdoqi">KDOQI</string>
    <string name="kdoqi_meaning">Kidney Disease Outcomes Quality Initiative</string>
    <string name="nant">NANT</string>
    <string name="nant_meaning">National Association of Nephrology Technicians/Technologists</string>
    <string name="nfa">NFA</string>
    <string name="nfa_meaning">National Kidney Foundation</string>
    <string name="nraa">NRAA</string>
    <string name="nraa_meaning">National Renal Administrators Association</string>
    <string name="pkd">PKD</string>
    <string name="pkd_meaning">Foundation Polycystic Kidney Disease Foundation</string>
    <string name="rpa">RPA</string>
    <string name="rpa_meaning">Renal Physicians Association</string>
    <string name="rsn">RSN</string>
    <string name="rsn_meaning">Renal Support Network</string>
    <string name="unos">UNOS</string>
    <string name="unos_meaning">United Network for Organ Sharing</string>
    <string name="usrds">USRDS</string>
    <string name="usrds_meaning">United States Renal Data System</string>
    <string name="aami_voc_meaning">An acronym that stands for the Advancement of Medical Instrumentation.
	AAMI creates the standards for varios features of dialysis, including water treatment and dialyzer 
	reprocessing. The AAMI Guidelines have been approved by the Centers for Medicare and Medicaid Services.
	</string>
    <string name="abscess">Abscess</string>
    <string name="abscess_meaning">A type of infection found under the skin, and resembles a blister or a
	pimple filled with pus or fluid. Infection on the fistula, graft or other tissues may happen if a fistula 
	needle is used in or near the abscess.
	</string>
    <string name="access">Acess</string>
    <string name="access_meaning">An access is a route into the bloodstream which allows enough blood flow for
	hemodialysis. There are two types of access. Permanent Access is when the vein is connected to the artery by 
	surgeon. It can be done directly through the fistula or synthetically with a piece of synthetic tubing, or graft. 
	The temporay vascular access is performed by catheter when it is placed in a large central vein.
	</string>
    <string name="acid">Acid</string>
    <string name="acid_meaning">A substance with pH below 7.0</string>
    <string name="your_score">Your Score</string>
    <string name="_130_130">130/130</string>
    <string name="exit">Exit</string>
    <string name="try_again">Try Again</string>
    <string name="dialysis_profile">Dialysis Technician Profile</string>
    <string name="name_manny_jordan">Name: Manny Jordan</string>
    <string name="hemodialysis_technician">Hemodialysis Technician</string>
    <string name="ad_id_banner_pct">ca-app-pub-6335622053027001/1177854776</string>
</resources>