<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    >
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="@dimen/min_width_custom_dialog">

    <TextView
        android:id="@+id/score_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_score"
        android:gravity="center"
        android:padding="@dimen/padding_10"
        android:textSize="@dimen/score_text_size"
        android:textAppearance="?android:textAppearanceMedium"
        android:background="#ccc"
        />

    <TextView
        android:id="@+id/score_digits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/firstFrame"
        android:text="@string/_130_130"
        android:textSize="@dimen/score_digits"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_gravity="center"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_10">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/total_pct"/>

        <LinearLayout
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">


            <Button
                android:id="@+id/try_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/try_again"
                android:textAppearance="?android:textAppearanceMedium"
                />

            <Button
                android:id="@+id/main_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exit"
                android:textAppearance="?android:textAppearanceMedium"
                />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>
</ScrollView>