<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.maxmal.www.freeprepfordialysistechnician.PctActivity">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
            <LinearLayout
                android:id="@+id/manny_jordan_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/padding_10"
                android:background="@android:drawable/dialog_holo_light_frame"
                >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialysis_profile"
                android:padding="@dimen/padding_10"
                android:textAppearance="?android:textAppearanceMedium"
                android:background="#401abc9c"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:minHeight="@dimen/list_item_height">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/manny_jordan_pct"
                   android:minHeight="@dimen/list_item_height"
                    android:padding="@dimen/padding_5dp"
                    android:background="#20000000"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/padding_16">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/name_manny_jordan"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textStyle="bold"
                        android:gravity="bottom"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="top"
                        android:text="@string/hemodialysis_technician"
                        android:textAppearance="?android:textAppearance"
                        android:textColor="@color/text_color_666"/>
                </LinearLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_arrow_forward_black_24dp"
                        android:layout_alignParentRight="true"
                        android:paddingRight="@dimen/padding_16"
                        android:tint="@color/text_color_666"
                        />

                    </RelativeLayout>




            </LinearLayout>
            </LinearLayout>

            <ListView
                android:id="@+id/pct_list"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/padding_10"/>


</LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/banner_adview_pct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ad_id_banner_pct"
        />

</RelativeLayout>
